syntax = "proto3";

package secret;

import "proto/secret/secret.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/aligang/Gophkeeper/pkg/common/secret";


service SecretService {

  rpc GetDescription(GetSecretDescriptionRequest)
      returns (SecretDescription);

  rpc List(ListSecretRequest)
      returns (ListSecretResponse);

  rpc Get(GetSecretRequest)
      returns (Secret);

  rpc Create(CreateSecretRequest)
      returns (SecretDescription);

  rpc Update(UpdateSecretRequest)
      returns (SecretDescription);

  rpc Delete(DeleteSecretRequest)
      returns (google.protobuf.Empty);
}


message GetSecretRequest {
  string id = 1;
  SecretType secret_type = 2;
}

message DeleteSecretRequest {
  string id = 1;
  SecretType secret_type = 2;
}


message GetSecretDescriptionRequest {
  string id = 1;
}


message CreateSecretRequest {
  oneof secret {
    PlainText text = 1;
    LoginPassword login_password = 2;
    CreditCard credit_card = 3;
    File file = 4;
  }
}


message UpdateSecretRequest {
  string id = 1;
  oneof secret {
    PlainText text = 11;
    LoginPassword login_password = 12;
    CreditCard credit_card = 13;
    File file = 14;
  }
}

message ListSecretRequest {
}

message ListSecretResponse {
  repeated SecretDescription secrets= 2;
}

